# json-modbus

./: .gitignore  Makefile.am  README.md  cmdargs  configure.ac  examples.h2m  json_modbus.ggo  json_modbus.ggo.in  powerbox_modbus.ggo  powerbox_modbus.ggo.in  read_and_output.sh  result  sunsaver_reader.ggo  sunsaver_reader.ggo.in  weatherstation.conf
docs/: Doxyfile.in  Makefile.am
src/: Makefile.am  cmdline.c  cmdline.h  config.h  dbg.h  json_modbus.1  json_modbus.c  json_modbus.h  modbus_reader.c  powerbox_modbus  powerbox_modbus.c  sunsaver_reader.c
test/: Makefile.am  http_server_test.c  server_test  server_test.c
